fix: addclass no longer goes off screen with big font and dyslexic font on (looks almost the exact same with both off)

--- a/frontend/src/components/Navbar.css
+++ b/frontend/src/components/Navbar.css
@@ -8,3 +8,11 @@
     position: fixed;
     bottom: 0
 }
+
+.navbar .MuiBottomNavigationAction-label {
+  font-size: 0.75rem;
+}
+
+.navbar .Mui-selected .MuiBottomNavigationAction-label {
+    font-size: 0.9rem;
+}
